# lattice_top

./: .gitignore  README.md  setup.cfg  setup.py  test_qwz.py
lattice_top/: __init__.py  amorphoussystem.py  latticesystem.py  plotting_functions.py
src/lattice_top/: __init__.py  amorphoussystem.py  generalfunctions.py  haldanesystem.py  latticesystem.py  plotting_functions.py  qwzsystem.py
use_examples/: QWZ_example.ipynb
