[metadata]
# replace with your username:
name = lattice_top-dpreuo
version = 0.0.1
author = Peru dOrnellas
author_email = ppd19@iac.ac.uk
description = Lattice topological systems and local markers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dpreuo/lattice_top
# project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src